cambios en el proyecto eliminacion de archivos que no se estan usando

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -28,98 +28,99 @@ a {
 
 /*Variables de color*/
 /*estilos para el header*/
-header {
+nav {
   background-color: #1E1E24; }
-  header nav {
-    background-color: #1E1E24; }
-    header nav img {
-      width: 4%;
-      margin-left: 20px; }
-    header nav div {
-      text-align: center;
-      margin-top: 10px; }
-      header nav div a {
-        cursor: pointer;
-        margin-left: 10px; }
-        header nav div a h1 {
-          color: #ffffff; }
+  nav div {
+    text-align: center;
+    margin-top: -10px; }
+    nav div ul {
+      margin-top: 1.5rem;
+      padding: 2px; }
+    nav div li {
+      font-size: 16px; }
 
-.nav_div--menu {
-  margin-bottom: 20px; }
+.header_titulo {
+  margin-top: 10px;
+  margin-left: 10px;
+  color: #F58A07; }
 
-/*estilos para el boton de iniciar seccion del header*/
-.boton_style {
-  border: none;
-  background: none; }
-  .boton_style span {
-    color: #ffffff;
-    padding-bottom: 7px;
-    font-size: 16px;
-    padding-right: 14px;
-    text-transform: uppercase; }
-  .boton_style svg {
-    transform: translateX(-8px);
-    transition: all 0.3s ease; }
+.div_button--estilos {
+  border: 5px solid #F58A07; }
 
-.boton_style:hover svg {
-  transform: translateX(0); }
-
-.boton_style:active svg {
-  transform: translateX(0.9); }
-
-.hover-underline {
-  position: relative;
+.li_a--menu {
   color: #ffffff;
-  padding-bottom: 20px; }
+  margin: 10px;
+  list-style: 16px; }
 
-.hover-underline:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 1.5px;
-  bottom: 0;
-  left: 0;
-  background-color: #F58A07;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out; }
+@media screen and (max-width: 800px) {
+  .header_titulo {
+    font-size: 15px;
+    color: #F58A07;
+    margin-top: 15px; }
+  .li_a--menu {
+    font-size: 12px; } }
 
-.boton_style:hover .hover-underline:after {
-  transform: scaleX(1);
-  transform-origin: bottom left; }
+footer {
+  background-color: #1E1E24;
+  margin-top: 20px; }
+  footer h3 {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-right: -15px;
+    color: #F58A07; }
 
-/*estilos para responsive del header*/
-@media screen and (max-width: 1000px) {
-  img {
-    width: 40px; } }
-
-@media screen and (max-width: 1000px) {
-  nav {
-    height: 9%;
-    align-content: space-between; } }
-
-@media screen and (max-width: 1000px) {
-  h1 {
-    display: none; } }
-
-@media screen and (max-width: 500px) {
-  nav {
-    height: 9%; } }
-
-@media screen and (max-width: 500px) {
-  h1 {
-    display: none; } }
+.fa-brands {
+  color: #F58A07;
+  font-size: 18px; }
 
 .main {
   margin-top: 11%;
   position: relative;
   margin-right: 10%; }
-  .main section {
+  .main_section--index {
+    height: 50em;
     text-align: center;
     margin-right: 5%;
     margin-left: 5%;
     padding: 5px;
-    margin-top: 18px;
+    margin-bottom: 5%;
     background-color: #2D3A3A;
     box-shadow: 0 6px 6px 0px #F58A07;
+    border-color: #F58A07;
+    border-radius: 10px;
+    margin-top: 3%; }
+    .main_section--index-div {
+      margin: 2%; }
+
+span {
+  padding: 5px;
+  margin-top: 20px;
+  font-size: 20px;
+  color: #ffffff; }
+
+h2 {
+  font-size: 30px;
+  align-items: center;
+  text-align: center;
+  padding-top: 20px;
+  margin-top: -5%;
+  margin-bottom: 2%; }
+
+.section-article {
+  justify-content: space-between;
+  display: flex;
+  margin-top: 20px; }
+  .section-article-img {
+    object-fit: cover;
+    margin: 10px;
+    padding: 5px;
+    border: 2px solid;
     border-color: #F58A07; }
+
+@media (max-width: 800px) {
+  h2 {
+    margin-top: 10px; } }
+
+@media (max-width: 800px) {
+  span {
+    font-size: 10px; } }
