--- a/sass/globales/_variables.scss
+++ b/sass/globales/_variables.scss
@@ -4,3 +4,8 @@ $bg-oranje: #F58A07;
 $bg-gris-petroleo: #1E1E24;
 $bg-gris: #2D3A3A;
 $bg-white: #ffffff; 
+
+$lista:16px;
+$menuresponsive:12px;
+$tituloh2:30px;
+$tituloh3:20px;
