--- a/sass/index.scss
+++ b/sass/index.scss
@@ -10,5 +10,8 @@
 //importando los estilos aplicados al header
 @import './secciones_iguales/header';
 
+//importando los estilos aplicados al footer
+@import './secciones_iguales/footer';
+
 //importando el home
 @import './paginas/home';
