--- a/sass/paginas/_home.scss
+++ b/sass/paginas/_home.scss
@@ -1,15 +1,59 @@
-.main{
+//estilos del home
+.main {
     margin-top: 11%;
     position: relative;
     margin-right: 10%;
 
-    section {
+    &_section--index {
+        height: 50em;
         text-align: center;
         margin-right: 5%;
         margin-left: 5%;
         padding: 5px;
-        margin-top: 18px;
+        margin-bottom: 5%;
         @include caja;
-    
+        margin-top: 3%;
+        &-div{
+            margin: 2%;
+        }
+    }
+}
+
+span{
+    padding: 5px;
+    margin-top: 20px;
+    font-size: 20px;
+    color: $bg-white;
+}
+
+h2 {
+    @include titulo;
+    margin-top: -5%;
+    margin-bottom: 2%;
+}
+
+.section-article {
+    justify-content: space-between;
+    display: flex;
+    margin-top: 20px;
+
+    &-img {
+        object-fit: cover;
+        margin: 10px;
+        padding: 5px;
+        border: 2px solid;
+        border-color: $bg-oranje;
+    }
+}
+
+@media (max-width: 800px) {
+    h2 {
+        margin-top: 10px;
+    }
+}
+
+@media (max-width: 800px) {
+    span {
+       font-size: 10px;
     }
 }
