--- a/sass/secciones_iguales/_header.scss
+++ b/sass/secciones_iguales/_header.scss
@@ -1,121 +1,38 @@
 /*estilos para el header*/
-header {
+nav{
     background-color: $bg-gris-petroleo;
-
-    nav {
-        background-color: $bg-gris-petroleo;
-
-        img {
-            width: 4%;
-            margin-left: 20px;
+    div{
+        text-align: center;
+        margin-top: -10px;
+        ul{
+            margin-top: 1.5rem;
+            padding: 2px;
         }
-
-        div {
-            text-align: center;
-            margin-top: 10px;
-
-            a {
-                cursor: pointer;
-                margin-left: 10px;
-
-                h1 {
-                    color: $bg-white;
-                }
-            }
+        li{
+            font-size: $lista;
         }
     }
-
 }
-
-.nav_div--menu {
-    margin-bottom: 20px;
-
+.header_titulo{
+    margin-top: 10px;
+    margin-left: 10px;
+    color: $bg-oranje;
 }
-
-/*estilos para el boton de iniciar seccion del header*/
-.boton_style {
-    border: none;
-    background: none;
-
-    span {
-        color: $bg-white;
-        padding-bottom: 7px;
-        font-size: 16px;
-        padding-right: 14px;
-        text-transform: uppercase;
-    }
-
-    svg {
-        transform: translateX(-8px);
-        transition: all 0.3s ease;
-    }
+.div_button--estilos{
+    border: 5px solid $bg-oranje;
 }
-
-.boton_style:hover {
-    svg {
-        transform: translateX(0);
-    }
-}
-
-.boton_style:active {
-    svg {
-        transform: translateX(0.9);
-    }
-}
-
-.hover-underline {
-    position: relative;
+.li_a--menu{
     color: $bg-white;
-    padding-bottom: 20px;
+    margin: 10px;
+    list-style: $lista;
 }
-
-.hover-underline:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 1.5px;
-    bottom: 0;
-    left: 0;
-    background-color: $bg-oranje;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-}
-
-.boton_style:hover .hover-underline:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-
-/*estilos para responsive del header*/
-
-@media screen and (max-width: 1000px) {
-    img {
-        width: 40px;
+@media screen and (max-width: 800px){
+    .header_titulo{
+      font-size: 15px;
+      color: $bg-oranje;
+      margin-top: 15px;
     }
-}
-
-@media screen and (max-width: 1000px) {
-    nav {
-        height: 9%;
-        align-content: space-between;
+    .li_a--menu{
+        font-size: $menuresponsive;
     }
-}
-
-@media screen and (max-width: 1000px) {
-    h1 {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 500px) {
-    nav {
-        height: 9%;
-    }
-}
-
-@media screen and (max-width:500px) {
-    h1 {
-        display: none;
-    }
-}
+  }
